fix(core.css): fix that bug where theres that wierd gap on the bottom

--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -25,7 +25,7 @@
 
 html,
 body {
-  height: 100%;
+  /* height: 100%; */
   overscroll-behavior: none;
   /* Prevent unwanted auto-scrolling */
   scroll-behavior: auto;
